優化登入體驗 - 添加 redirectUri 保留當前頁面，減少重複登入

--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,8 @@ async function initLiff() {
     await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
-      liff.login();
+      // 🔧 優化：使用 redirectUri 保留當前頁面
+      liff.login({ redirectUri: window.location.href });
       return;
     }
     
