--- a/edit.html
+++ b/edit.html
@@ -81,7 +81,8 @@ async function initLiff() {
     await liff.init({ liffId: LIFF_ID });
     
     if (!liff.isLoggedIn()) {
-      liff.login();
+      // 🔧 優化：使用 redirectUri 保留當前頁面
+      liff.login({ redirectUri: window.location.href });
       return;
     }
     
