--- a/history.html
+++ b/history.html
@@ -141,7 +141,8 @@ async function initLiff() {
     await liff.init({ liffId: LIFF_ID });
     
     if (!liff.isLoggedIn()) {
-      liff.login();
+      // 🔧 優化：使用 redirectUri 保留當前頁面
+      liff.login({ redirectUri: window.location.href });
       return;
     }
 
