--- a/transfer.html
+++ b/transfer.html
@@ -122,7 +122,8 @@ async function initLiff() {
     await liff.init({ liffId: "2008231108-8dwdPJ26" });
     
     if (!liff.isLoggedIn()) {
-      liff.login();
+      // 🔧 優化：使用 redirectUri 保留當前頁面
+      liff.login({ redirectUri: window.location.href });
       return;
     }
     
