--- a/profile.html
+++ b/profile.html
@@ -81,10 +81,10 @@ function renderProfile(data, pictureUrl, displayName) {
           <h2 style="text-align:left;margin:0;">${data.name || displayName || '會員'}</h2>
         </div>
         <div class="points-card">
-          <div class="points-icon">💰</div>
+          <div class="points-icon">❤️</div>
           <div class="points-info">
-            <p class="points-label">目前點數</p>
-            <p class="points-value">${data.points || 0} <span>點</span></p>
+            <p class="points-label">愛心點數</p>
+            <p class="points-value" style="color: #FF6B9D;">${data.points || 0} <span>點</span></p>
           </div>
         </div>
       </div>
@@ -140,8 +140,8 @@ function renderProfile(data, pictureUrl, displayName) {
       
       <div class="action-buttons">
         <button class="btn btn-primary" onclick="goTransfer()">
-          <span class="btn-icon">💸</span>
-          轉點給好友
+          <span class="btn-icon">❤️</span>
+          分享愛心給好友
         </button>
         <button class="btn btn-secondary" onclick="goHistory()">
           <span class="btn-icon">📊</span>
