移除推薦獎勵提示，保留推薦碼綁定功能 + 更新為公益點數主題

--- a/profile.html
+++ b/profile.html
@@ -83,7 +83,7 @@ function renderProfile(data, pictureUrl, displayName) {
         <div class="points-card">
           <div class="points-icon">❤️</div>
           <div class="points-info">
-            <p class="points-label">愛心點數</p>
+            <p class="points-label">公益點數</p>
             <p class="points-value" style="color: #FF6B9D;">${data.points || 0} <span>點</span></p>
           </div>
         </div>
@@ -141,7 +141,7 @@ function renderProfile(data, pictureUrl, displayName) {
       <div class="action-buttons">
         <button class="btn btn-primary" onclick="goTransfer()">
           <span class="btn-icon">❤️</span>
-          分享愛心給好友
+          分享公益點數
         </button>
         <button class="btn btn-secondary" onclick="goHistory()">
           <span class="btn-icon">📊</span>
