全面優化 RWD 響應式設計和公益點數黃色主題

--- a/profile.html
+++ b/profile.html
@@ -83,8 +83,8 @@ function renderProfile(data, pictureUrl, displayName) {
         <div class="points-card">
           <div class="points-icon">❤️</div>
           <div class="points-info">
-            <p class="points-label">公益點數</p>
-            <p class="points-value" style="color: #FF6B9D;">${data.points || 0} <span>點</span></p>
+            <p class="points-label" style="color: #FFB800;">公益點數</p>
+            <p class="points-value" style="color: #FFB800;">${data.points || 0} <span>點</span></p>
           </div>
         </div>
       </div>
