完成公益點數配色優化 - 三層顏色分明更美觀

--- a/profile.html
+++ b/profile.html
@@ -232,8 +232,8 @@ function renderProfile(data, pictureUrl, displayName) {
         <div class="points-card">
           <div class="points-icon">❤️</div>
           <div class="points-info">
-            <p class="points-label" style="color: #FFB800;">公益點數</p>
-            <p class="points-value" style="color: #FFB800;">${data.points || 0} <span>點</span></p>
+            <p class="points-label" style="color: #856404; font-weight: 600;">公益點數</p>
+            <p class="points-value" style="color: #FFB800;">${data.points || 0} <span style="color: #856404;">點</span></p>
           </div>
         </div>
       </div>
