--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
   <div class="register-card">
     <div class="register-header">
       <h1>會員註冊</h1>
-      <p style="color: #FFB800;">❤️ 完成註冊即贈送 100 公益點數</p>
+      <p style="color: #E69500; font-weight: 600;">❤️ 完成註冊即贈送 <span style="color: #FFB800; font-weight: 800;">100</span> 公益點數</p>
     </div>
     
     <form id="registerForm">
