優化快速選擇按鈕 - 新增1000點選項，黃色主題設計，響應式布局

--- a/transfer.html
+++ b/transfer.html
@@ -35,12 +35,23 @@
         </div>
         
         <div class="quick-amount">
-          <p>快速選擇：</p>
+          <p style="margin: 0 0 10px 0; color: #666; font-size: 14px; font-weight: 600;">⚡ 快速選擇：</p>
           <div class="quick-btns">
-            <button type="button" class="btn-quick" onclick="setAmount(50)">50</button>
-            <button type="button" class="btn-quick" onclick="setAmount(100)">100</button>
-            <button type="button" class="btn-quick" onclick="setAmount(200)">200</button>
-            <button type="button" class="btn-quick" onclick="setAmount(500)">500</button>
+            <button type="button" class="btn-quick" onclick="setAmount(50)">
+              <span style="font-size: 18px; font-weight: 800;">50</span>
+            </button>
+            <button type="button" class="btn-quick" onclick="setAmount(100)">
+              <span style="font-size: 18px; font-weight: 800;">100</span>
+            </button>
+            <button type="button" class="btn-quick" onclick="setAmount(200)">
+              <span style="font-size: 18px; font-weight: 800;">200</span>
+            </button>
+            <button type="button" class="btn-quick" onclick="setAmount(500)">
+              <span style="font-size: 18px; font-weight: 800;">500</span>
+            </button>
+            <button type="button" class="btn-quick" onclick="setAmount(1000)">
+              <span style="font-size: 18px; font-weight: 800;">1000</span>
+            </button>
           </div>
         </div>
         
