統一所有頁面使用同一個LIFF ID (2008231108-2PDbO5qk) 修復頁面無法顯示問題

--- a/核心文件/register.html
+++ b/核心文件/register.html
@@ -114,7 +114,7 @@ async function initLiff() {
     // 先讀取推薦碼
     getReferralCodeFromURL();
     
-    await liff.init({ liffId: "2008231108-rZQKp3mn" });
+    await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
       liff.login();
