--- a/核心文件/transfer.html
+++ b/核心文件/transfer.html
@@ -84,7 +84,7 @@ let transferData = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-8dwdPJ26" });
+    await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
       liff.login();
