--- a/edit.html
+++ b/edit.html
@@ -49,7 +49,7 @@
 </div>
 
 <script>
-const LIFF_ID = "2008231108-dmPJ4BrZ"; // 編輯會員資料頁面
+const LIFF_ID = "2008231108-2PDbO5qk"; // 統一使用主要 LIFF ID
 const API_URL = "https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec";
 
 let lineUserId = '';
