--- a/history.html
+++ b/history.html
@@ -113,7 +113,7 @@
 </div>
 
 <script>
-const LIFF_ID = "2008231108-vDmD4yRa"; // 點數交易記錄頁面
+const LIFF_ID = "2008231108-2PDbO5qk"; // 統一使用主要 LIFF ID
 const API_URL = "https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec";
 
 // 🔧 安全關閉視窗函數
