--- a/transfer.html
+++ b/transfer.html
@@ -133,7 +133,7 @@ function safeCloseWindow() {
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-8dwdPJ26" });
+    await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
       // 🔧 優化：使用 redirectUri 保留當前頁面
