--- a/核心文件/edit.html
+++ b/核心文件/edit.html
@@ -49,7 +49,7 @@
 </div>
 
 <script>
-const LIFF_ID = "2008231108-dmPJ4BrZ"; // 編輯會員資料頁面
+const LIFF_ID = "2008231108-2PDbO5qk"; // 編輯會員資料頁面
 const API_URL = "https://script.google.com/macros/s/AKfycbwYbhHNlwix-1FQzB63PVKprfiV0Q3CxOLNFuGUWXXnPNPsiN3L5bvkr6id0XyITi_F/exec";
 
 let lineUserId = '';
