--- a/核心文件/history.html
+++ b/核心文件/history.html
@@ -113,7 +113,7 @@
 </div>
 
 <script>
-const LIFF_ID = "2008231108-vDmD4yRa"; // 點數交易記錄頁面
+const LIFF_ID = "2008231108-2PDbO5qk"; // 點數交易記錄頁面
 const API_URL = "https://script.google.com/macros/s/AKfycbwYbhHNlwix-1FQzB63PVKprfiV0Q3CxOLNFuGUWXXnPNPsiN3L5bvkr6id0XyITi_F/exec";
 
 async function initLiff() {
