--- a/login.html
+++ b/login.html
@@ -318,13 +318,18 @@ async function handleLogin(event) {
   btn.textContent = '登入中...';
   
   try {
-    const params = new URLSearchParams({
-      action: 'login',
-      username: username,
-      password: password
+    // 🔐 使用安全的 POST 方式傳送敏感資料
+    const res = await fetch(API_URL, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        action: 'login',
+        username: username,
+        password: password
+      })
     });
-    
-    const res = await fetch(`${API_URL}?${params.toString()}`);
     const data = await res.json();
     
     if (data.success) {
