--- a/withdraw.html
+++ b/withdraw.html
@@ -296,17 +296,22 @@ document.getElementById('withdrawForm').addEventListener('submit', async functio
   submitBtn.innerHTML = '<span class="btn-icon">⏳</span> 處理中...';
   
   try {
-    const params = new URLSearchParams({
-      action: 'withdraw',
-      lineUserId: currentUserId,
-      points: points,
-      bankName: bankName,
-      bankAccount: bankAccount,
-      accountName: accountName,
-      notes: notes
+    // 🔐 使用安全的 POST 方式傳送敏感資料（銀行帳號）
+    const res = await fetch(API_URL, {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({
+        action: 'withdraw',
+        lineUserId: currentUserId,
+        points: points,
+        bankName: bankName,
+        bankAccount: bankAccount,
+        accountName: accountName,
+        notes: notes
+      })
     });
-    
-    const res = await fetch(`${API_URL}?${params.toString()}`);
     const data = await res.json();
     
     if (data.success) {
