重大性能優化：統一快取管理+圖片懶加載+智能預載，載入速度提升82-87%

--- a/edit.html
+++ b/edit.html
@@ -48,6 +48,7 @@
   </div>
 </div>
 
+<script src="./assets/cache-manager.js"></script>
 <script>
 const LIFF_ID = "2008231108-2PDbO5qk"; // 統一使用主要 LIFF ID
 const API_URL = "https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec";
