--- a/transfer.html
+++ b/transfer.html
@@ -90,7 +90,10 @@
   </div>
 </div>
 
+<script src="./assets/cache-manager.js"></script>
 <script>
+const API_URL = "https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec";
+
 let lineUserId = '';
 let currentPoints = 0;
 let receiverData = null;
