--- a/product-detail.html
+++ b/product-detail.html
@@ -150,6 +150,7 @@
 }
 </style>
 
+<script src="./assets/cache-manager.js"></script>
 <script>
 const API_URL = 'https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec';
 
