--- a/核心文件/referral-stats.html
+++ b/核心文件/referral-stats.html
@@ -252,8 +252,11 @@
   </div>
 
   <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <script src="config.js"></script>
   <script>
+    // 配置
+    const LIFF_ID = "2008231108-2PDbO5qk";
+    const API_URL = 'https://script.google.com/macros/s/AKfycbzjGZOfhfd792G7hv-6wbyClTxcvD1n5zsxRQC6yfJatjKG5fTayhyz3EdhUNDDNQ96/exec';
+    
     let lineUserId = '';
 
     // 初始化 LIFF
