🔧 修復CORS問題並新增設定密碼功能 - 移除錯誤的setHeader方法，讓Google Apps Script自動處理CORS - 新增set-password.html設定帳號密碼頁面 - 更新相關HTML文件的LIFF配置 - 新增CORS修復文檔和操作指南

--- a/admin.html
+++ b/admin.html
@@ -573,7 +573,7 @@ let adjustData = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-2PDbO5qk" }); // 暫時使用會員中心的 LIFF ID
+    await liff.init({ liffId: "2008231108-B5pMPvX7" }); // 管理後台專用 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login();
