--- a/核心文件/admin.html
+++ b/核心文件/admin.html
@@ -573,7 +573,7 @@ let adjustData = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-2PDbO5qk" }); // 暫時使用會員中心的 LIFF ID
+    await liff.init({ liffId: "2008231108-B5pMPvX7" }); // 管理後台專用 LIFF ID
     
     if (!liff.isLoggedIn()) {
       liff.login();
