--- a/核心文件/purchase.html
+++ b/核心文件/purchase.html
@@ -233,7 +233,7 @@ let referrerInfo = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-2PDbO5qk" });
+    await liff.init({ liffId: "2008231108-Y0P0jaro" });
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
