--- a/set-password.html
+++ b/set-password.html
@@ -242,7 +242,7 @@ let currentUserId = '';
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-0rAX3R5d" });
+    await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
