--- a/product-detail.html
+++ b/product-detail.html
@@ -160,7 +160,7 @@ let currentProduct = null;
 
 async function initLiff() {
   try {
-    await liff.init({ liffId: "2008231108-3ewQ0Kdo" });
+    await liff.init({ liffId: "2008231108-2PDbO5qk" });
     
     if (!liff.isLoggedIn()) {
       liff.login({ redirectUri: window.location.href });
